<resources>
    <string name="app_name">Event Manager</string>

    <string name="title_overview">Overview</string>
    <string name="title_events">Events</string>
    <string name="title_people">People</string>
    <string name="title_event">Event</string>
    <string name="title_messages">Messages</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_add_event">Add event</string>
    <string name="action_add_person">Add person</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_login">Login</string>

    <string name="error_text_noname">Unnamed person</string>
    <string name="error_text_noemail">No email available</string>
    <string name="error_text_nobirthdate">No birth date available</string>

    <string name="error_text_notitle">Unnamed event</string>
    <string name="error_text_nodescription">No description available</string>
    <string name="error_text_nostartdate">No start date available</string>
    <string name="error_text_noenddate">No end date available</string>

    <string name="error_text_fetch">Error fetching data</string>

    <string name="info_text_edit">Successfully updated attributes</string>
    <string name="info_text_destroy">Successfully deleted object</string>

    <string name="info_text_sign_in">You are now signed in as %s</string>
    <string name="info_text_sign_out">You have been signed out</string>
    <string name="info_confirmation_accept">Successfully confirmed your attendance to an event</string>
    <string name="info_confirmation_decline">Successfully declined your attendance to an event</string>

    <string name="title_activity_person">PersonActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_show_event">Event</string>
    <string name="title_show_person">Person details</string>
    <string name="title_edit_person">Edit Person</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="hint_name">Enter name</string>
    <string name="email">Email</string>
    <string name="hint_email">Enter email</string>
    <string name="birth_date">Birthdate</string>
    <string name="hint_birth_date">Select your birthdate</string>
    <string name="title">Title</string>
    <string name="hint_title">Enter title</string>
    <string name="description">Description</string>
    <string name="hint_description">Enter description</string>
    <string name="start_date">Start date</string>
    <string name="hint_start_date">Select the start date</string>
    <string name="end_date">End date</string>
    <string name="hint_end_date">Select the start date</string>
    <string name="title_activity_edit_event">Edit Event</string>

    <string name="save">Save</string>

    <string name="name_admin">Administrator</string>
    <string name="email_admin">admin@events.restdesc.org</string>

    <!-- Error handling -->
    <string name="error_text">An %s error occurred while processing your request</string>
    <string name="error_date">Invalid date</string>
    <string name="error_type_io">I/O error</string>
    <string name="error_type_api">API error</string>
    <string name="error_type_unknown">unknown error</string>

    <string name="error_not_signed_in">Please sign in first</string>

    <string name="title_activity_edit_person">Edit Person</string>


    <string name="title_edit_event">Edit Event</string>
    <string name="title_show_event">Event Details</string>
    <string name="content_description_time_start">Time_Start</string>
    <string name="content_description_date_start">Date_Start</string>
    <string name="content_description_date_end">Date_End</string>
    <string name="content_description_time_end">Time_End</string>


    <!-- Buttons -->
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_event">EventActivity</string>

    <string name="message">Message</string>
    <string name="hint_message">Enter message</string>

    <string name="action_add">Add</string>
    <string name="date">Created at</string>
    <string name="default_time">12:00</string>
    <string name="default_date">1970-01-01</string>

</resources>
