<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Dialog_container">

    <TextView
        android:text="@string/title"
        style="@style/Edit_component_text"/>

    <EditText
        android:id="@+id/field_title"
        android:hint="@string/hint_title"
        style="@style/Edit_component_edit_primary"/>

    <TextView
        style="@style/Section_Dummy" />

    <TextView
        android:text="@string/description"
        style="@style/Edit_component_text"/>


    <EditText
        android:id="@+id/field_description"
        android:hint="@string/hint_description"
        style="@style/Edit_component_edit_secondary"/>

    <TextView
        style="@style/Section_Dummy" />

    <TextView
        android:text="@string/start_date"
        style="@style/Edit_component_text"/>


    <RelativeLayout
        style="@style/Edit_component_datepicker_container">

        <TextView
            android:id="@+id/field_start_date"
            style="@style/Edit_component_picker_date"
            android:layout_toLeftOf="@+id/field_start_time"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/content_description_date_start"/>

        <TextView
            android:id="@+id/field_start_time"
            style="@style/Edit_component_picker_time"
            android:text="@string/default_time"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/content_description_time_start"/>

    </RelativeLayout>

    <TextView
        android:text="@string/end_date"
        style="@style/Edit_component_text"/>

    <RelativeLayout
        style="@style/Edit_component_datepicker_container">

        <TextView
            android:id="@+id/field_end_date"
            style="@style/Edit_component_picker_date"
            android:text="@string/default_date"
            android:layout_toLeftOf="@+id/field_end_time"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/content_description_date_end"/>

        <TextView
            android:id="@+id/field_end_time"
            style="@style/Edit_component_picker_time"
            android:text="@string/default_time"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/content_description_time_end"
            />

    </RelativeLayout>

</LinearLayout>
