<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#70000000"
        style="@style/Form_components"/>

    <EditText
        android:id="@+id/field_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/form_head_entry"

        android:textColor="#000000"
        android:hint="@string/hint_name"
        style="@style/Form_components"/>

    <TextView
        style="@style/Section_Dummy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#70000000"
        style="@style/Form_components"/>


    <EditText
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/customEntry"

        android:textColor="#000000"
        android:hint="@string/hint_email"
        style="@style/Form_components"/>

    <TextView
        style="@style/Section_Dummy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_date"
        android:textColor="#70000000"
        style="@style/Form_components"/>

    <TextView
        android:id="@+id/field_birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DatePicker"
        android:text="12/02/1994"/>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:gravity="right">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/save"
        android:textColor="@color/material_pink_500"
        style="@style/Form_components"
        />

    </RelativeLayout>

</LinearLayout>